--- a/index.html
+++ b/index.html
@@ -9,11 +9,35 @@
     <script src="https://kit.fontawesome.com/fcd20302e9.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100;400;500;600;700;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <script defer src="js/app.js" ></script>
-    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>    
+    <script defer src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script defer src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script defer src="js/app.js" ></script>    
 </head>
 <body>
-    <section class="section">
+    <section class="section uno">
+        <nav class="menu">
+            <div class="boton">
+                <div class="linea1"></div>
+                <div class="linea2"></div>
+                <div class="linea3"></div>
+            </div>
+        </nav>
+        <div class="cortinilla">
+        </div>
+        <div class="menucortina">
+                    <ul class="ul">
+                        <li class="li">
+                            <a href="#works">Works</a>
+                        </li>
+                        <li class="li">
+                            <a href="#rrss">About</a>
+                        </li>
+                        <li class="li">
+                            <a href="#rrss">Social Media</a>
+                        </li>
+                    </ul>
+            </div>
+    </div>
         <div id="particles-js"></div>
         <div class="mainpage">
             <h1 class="h1">Cristina Almansa</h1>
@@ -21,7 +45,7 @@
             <img class="logo" src="assets/logo1.png" alt="">
         </div> 
     </section>
-    <section>
+    <section id="works" class="section dos">
         <div class="cuerpo">
             <div class="works">
                 <div class="nombreseccion">
@@ -29,25 +53,26 @@
                     <div class="lineasub"></div>
                 </div>
                 <div class="secciones">
-                    <div class="tarjeta uno">
-                        <h3 class="h3">Website Redesign</h3>
-                    </div>
-                    <div class="tarjeta dos">
-                        <h3 class="h3">Copycat Website</h3>
-                    </div>
-                    <div class="tarjeta tres">
-                        <h3 class="h3">Copycat Website</h3>
-                    </div>
-                    <div class="tarjeta cuatro">
-                        <h3 class="h3">Graphic Design</h3>
-                    </div>
+                        <div class="tarjeta uno activo">
+                            <h3 class="h3">Website Redesign</h3>
+                        </div>
+                        <div class="tarjeta dos activo">
+                            <h3 class="h3">Copycat Website</h3>
+                        </div>
+                        <div class="tarjeta tres activo">
+                            <h3 class="h3">Copycat Website</h3>
+                        </div>
+                        <div class="tarjeta cuatro activo">
+                            <h3 class="h3">Graphic Design</h3>
+                        </div>
                 </div>
             </div>
-        
         </div>
+    </section>
+    <section id="rrss" class="section">
         <div class="foot">
             <div class="about">
-                <div class="cincuenta">
+                <div class="cincuenta uno">
                     <div class="nombreseccion">
                         <h2 class="h2">About</h2>
                         <div class="lineasub"></div>
@@ -58,7 +83,7 @@
                         <p class="p">ILLUSTRATOR | PHOTOSHOP | FIGMA </p>
                     </div>
                 </div>
-                <div class="cincuenta">
+                <div class="cincuenta dos">
                     <div class="img">
                         <img class="" src="assets/fotopers.png" alt="">
                     </div>
@@ -66,12 +91,12 @@
             </div>
             <div class="rrss">
                 <div class="iconos">
-                    <span><i class="fab fa-github"></i></span>
-                    <span><i class="fab fa-instagram"></i></span>
-                    <span><i class="fab fa-linkedin-in"></i></span>
+                    <a href="https://github.com/cristialmansa"><i class="fab fa-github"></i></a>
+                    <a href="https://www.instagram.com/cristialmansita/"><i class="fab fa-instagram"></i></a>
+                    <a href="www.linkedin.com/in/cristina-almansa-herrero"><i class="fab fa-linkedin-in"></i></a>
                 </div>
                 <p class="p">Contact me :</p>
-                <a href="#" class="email">hola@cristinalmansa.es</a>
+                <a href="mailto:hola@cristinalmansa.es" class="email">hola@cristinalmansa.es</a>
             </div>
         </div>
     </section>
