--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
                 <div class="linea2"></div>
                 <div class="linea3"></div>
             </div>
-            <!-- <div class="cookies">
-                <p>Esta página utiliza cookies.</p>
-                <div class="pestanacerrar"></div>
-            </div> -->
+            <div class="cookies">
+                <p class="p">Esta página utiliza cookies</p>
+                <div class="pestanacerrar">
+                    <p class="p">+</p>
+                </div>
+            </div>
         </nav>
         <div class="mainpage">
             <h1 class="h1">Cristina Almansa</h1>
@@ -112,7 +114,7 @@
                     <p class="p">Trabajo personal de rediseño de la página web del Centro de Biología Molecular</p>
                 </div>
                 <div class="btngithub">
-                    <a rel="external" href="#">Ver en GitHub</a>
+                    <a rel="external" href="https://github.com/cristialmansa/cbm">Ver en GitHub</a>
                     <i class="fab fa-github"></i>
                 </div>
             </div>
@@ -140,7 +142,7 @@
                     <p class="p">Trabajo personal de copiar la página web de Apple</p>
                 </div>
                 <div class="btngithub">
-                    <a rel="external" href="#">Ver en GitHub</a>
+                    <a rel="external" href="https://github.com/cristialmansa/apple">Ver en GitHub</a>
                     <i class="fab fa-github"></i>
                 </div>
             </div>
@@ -168,7 +170,7 @@
                     <p class="p">Trabajo personal de copiar la página web de Pesto Restaurant</p>
                 </div>
                 <div class="btngithub">
-                    <a rel="external" href="#">Ver en GitHub</a>
+                    <a rel="external" href="https://github.com/cristialmansa/pestorestaurant">Ver en GitHub</a>
                     <i class="fab fa-github"></i>
                 </div>
             </div>
